// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/visualize/Sidebar default 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-accordion p-component lck-bg-primary lck-sidebar"
  >
    <div
      class="p-accordion-tab"
    >
      <div
        class="p-accordion-header"
      >
        <a
          aria-controls="pv_id_28_content"
          class="p-accordion-header-link"
          id="pv_id_28_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-right"
          />
           
          <!---->
           
      No chapter to display
      
          <!---->
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_28_header"
        class="p-toggleable-content"
        id="pv_id_28_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-accordion-content"
        >
           
          <div />
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`storyshots components/visualize/Sidebar with edition and props items 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-accordion p-component lck-bg-primary lck-sidebar"
  >
    <div
      class="p-accordion-tab"
    >
      <div
        class="p-accordion-header"
      >
        <a
          aria-controls="pv_id_33_content"
          class="p-accordion-header-link"
          id="pv_id_33_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-right"
          />
           
          <!---->
           
      First item
      
          <span
            class="action-set"
          >
            <span
              class="pi pi-pencil action-button"
            />
             
            <!---->
          </span>
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_33_header"
        class="p-toggleable-content"
        id="pv_id_33_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-accordion-content"
        >
           
          <div>
            <a
              class="mock-link"
            >
              <span
                class="pi pi-ellipsis-v handle"
              />
              
          First subitem
          
              <span
                class="action-subset"
              >
                <span
                  class="pi pi-pencil action-button"
                />
                 
                <span
                  class="pi pi-trash action-button"
                />
              </span>
            </a>
            <a
              class="mock-link"
            >
              <span
                class="pi pi-ellipsis-v handle"
              />
              
          Second subitem
          
              <span
                class="action-subset"
              >
                <span
                  class="pi pi-pencil action-button"
                />
                 
                <span
                  class="pi pi-trash action-button"
                />
              </span>
            </a>
          </div>
           
          <button
            class="new-item-button new-subitem-button p-button p-component"
            type="button"
          >
            <span
              class="pi pi-plus p-button-icon p-button-icon-right"
            />
             
            <span
              class="p-button-label"
            >
              Create a new element
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="p-accordion-tab"
    >
      <div
        class="p-accordion-header"
      >
        <a
          aria-controls="pv_id_34_content"
          class="p-accordion-header-link"
          id="pv_id_34_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-right"
          />
           
          <!---->
           
      Second item
      
          <span
            class="action-set"
          >
            <span
              class="pi pi-pencil action-button"
            />
             
            <!---->
          </span>
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_34_header"
        class="p-toggleable-content"
        id="pv_id_34_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-accordion-content"
        >
           
          <div>
            <a
              class="mock-link"
            >
              <span
                class="pi pi-ellipsis-v handle"
              />
              
          Third subitem
          
              <span
                class="action-subset"
              >
                <span
                  class="pi pi-pencil action-button"
                />
                 
                <span
                  class="pi pi-trash action-button"
                />
              </span>
            </a>
            <a
              class="mock-link"
            >
              <span
                class="pi pi-ellipsis-v handle"
              />
              
          Fourth subitem
          
              <span
                class="action-subset"
              >
                <span
                  class="pi pi-pencil action-button"
                />
                 
                <span
                  class="pi pi-trash action-button"
                />
              </span>
            </a>
          </div>
           
          <button
            class="new-item-button new-subitem-button p-button p-component"
            type="button"
          >
            <span
              class="pi pi-plus p-button-icon p-button-icon-right"
            />
             
            <span
              class="p-button-label"
            >
              Create a new element
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
        </div>
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`storyshots components/visualize/Sidebar with edition and props items as admin 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-accordion p-component lck-bg-primary lck-sidebar"
  >
    <div
      class="p-accordion-tab"
    >
      <div
        class="p-accordion-header"
      >
        <a
          aria-controls="pv_id_35_content"
          class="p-accordion-header-link"
          id="pv_id_35_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-right"
          />
           
          <!---->
           
      First item
      
          <span
            class="action-set"
          >
            <span
              class="pi pi-pencil action-button"
            />
             
            <span
              class="pi pi-trash action-button"
            />
          </span>
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_35_header"
        class="p-toggleable-content"
        id="pv_id_35_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-accordion-content"
        >
           
          <div>
            <a
              class="mock-link"
            >
              <span
                class="pi pi-ellipsis-v handle"
              />
              
          First subitem
          
              <span
                class="action-subset"
              >
                <span
                  class="pi pi-pencil action-button"
                />
                 
                <span
                  class="pi pi-trash action-button"
                />
              </span>
            </a>
            <a
              class="mock-link"
            >
              <span
                class="pi pi-ellipsis-v handle"
              />
              
          Second subitem
          
              <span
                class="action-subset"
              >
                <span
                  class="pi pi-pencil action-button"
                />
                 
                <span
                  class="pi pi-trash action-button"
                />
              </span>
            </a>
          </div>
           
          <button
            class="new-item-button new-subitem-button p-button p-component"
            type="button"
          >
            <span
              class="pi pi-plus p-button-icon p-button-icon-right"
            />
             
            <span
              class="p-button-label"
            >
              Create a new element
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="p-accordion-tab"
    >
      <div
        class="p-accordion-header"
      >
        <a
          aria-controls="pv_id_36_content"
          class="p-accordion-header-link"
          id="pv_id_36_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-right"
          />
           
          <!---->
           
      Second item
      
          <span
            class="action-set"
          >
            <span
              class="pi pi-pencil action-button"
            />
             
            <span
              class="pi pi-trash action-button"
            />
          </span>
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_36_header"
        class="p-toggleable-content"
        id="pv_id_36_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-accordion-content"
        >
           
          <div>
            <a
              class="mock-link"
            >
              <span
                class="pi pi-ellipsis-v handle"
              />
              
          Third subitem
          
              <span
                class="action-subset"
              >
                <span
                  class="pi pi-pencil action-button"
                />
                 
                <span
                  class="pi pi-trash action-button"
                />
              </span>
            </a>
            <a
              class="mock-link"
            >
              <span
                class="pi pi-ellipsis-v handle"
              />
              
          Fourth subitem
          
              <span
                class="action-subset"
              >
                <span
                  class="pi pi-pencil action-button"
                />
                 
                <span
                  class="pi pi-trash action-button"
                />
              </span>
            </a>
          </div>
           
          <button
            class="new-item-button new-subitem-button p-button p-component"
            type="button"
          >
            <span
              class="pi pi-plus p-button-icon p-button-icon-right"
            />
             
            <span
              class="p-button-label"
            >
              Create a new element
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
        </div>
      </div>
    </div>
     
    <button
      class="new-item-button p-button p-component"
      type="button"
    >
      <span
        class="pi pi-plus p-button-icon p-button-icon-right"
      />
       
      <span
        class="p-button-label"
      >
        Create a new element
      </span>
       
      <!---->
      <span
        class="p-ink"
      />
    </button>
  </div>
</div>
`;

exports[`storyshots components/visualize/Sidebar with props items 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-accordion p-component lck-bg-primary lck-sidebar"
  >
    <div
      class="p-accordion-tab"
    >
      <div
        class="p-accordion-header"
      >
        <a
          aria-controls="pv_id_29_content"
          class="p-accordion-header-link"
          id="pv_id_29_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-right"
          />
           
          <!---->
           
      First item
      
          <!---->
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_29_header"
        class="p-toggleable-content"
        id="pv_id_29_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-accordion-content"
        >
           
          <div>
            <a
              class="mock-link"
            >
              <!---->
              
          First subitem
          
              <!---->
            </a>
            <a
              class="mock-link"
            >
              <!---->
              
          Second subitem
          
              <!---->
            </a>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
    <div
      class="p-accordion-tab"
    >
      <div
        class="p-accordion-header"
      >
        <a
          aria-controls="pv_id_30_content"
          class="p-accordion-header-link"
          id="pv_id_30_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-right"
          />
           
          <!---->
           
      Second item
      
          <!---->
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_30_header"
        class="p-toggleable-content"
        id="pv_id_30_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-accordion-content"
        >
           
          <div>
            <a
              class="mock-link"
            >
              <!---->
              
          Third subitem
          
              <!---->
            </a>
            <a
              class="mock-link"
            >
              <!---->
              
          Fourth subitem
          
              <!---->
            </a>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`storyshots components/visualize/Sidebar with props items and active 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-accordion p-component lck-bg-primary lck-sidebar"
  >
    <div
      class="p-accordion-tab"
    >
      <div
        class="p-accordion-header"
      >
        <a
          aria-controls="pv_id_31_content"
          class="p-accordion-header-link"
          id="pv_id_31_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-right"
          />
           
          <!---->
           
      First item
      
          <!---->
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_31_header"
        class="p-toggleable-content"
        id="pv_id_31_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-accordion-content"
        >
           
          <div>
            <a
              class="mock-link"
            >
              <!---->
              
          First subitem
          
              <!---->
            </a>
            <a
              class="mock-link"
            >
              <!---->
              
          Second subitem
          
              <!---->
            </a>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
    <div
      class="p-accordion-tab p-accordion-tab-active"
    >
      <div
        class="p-accordion-header p-highlight"
      >
        <a
          aria-controls="pv_id_32_content"
          aria-expanded="true"
          class="p-accordion-header-link"
          id="pv_id_32_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-down"
          />
           
          <!---->
           
      Second item
      
          <!---->
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_32_header"
        class="p-toggleable-content"
        id="pv_id_32_content"
        role="region"
      >
        <div
          class="p-accordion-content"
        >
           
          <div>
            <a
              class="mock-link"
            >
              <!---->
              
          Third subitem
          
              <!---->
            </a>
            <a
              class="mock-link router-link-exact-active"
            >
              <!---->
              
          Fourth subitem
          
              <!---->
            </a>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;
